# thesis

./: .gitignore  Cargo.toml  README.md  generate-flamegraph.sh
dataset/california/normalized/: cal.cedge.txt  cal.cnode.txt  edge.txt  node.txt  query.txt
dataset/objects/: anticor.txt  cor.txt  ind.txt
dataset/test01/: edge.txt  node.txt  object.txt  query.txt
script/: generate_objects.py  normalizer.py
src/: api.txt  config.rs  lib.rs  main.rs  prelude.rs  queries.rs  types.rs
src/algo/: mod.rs  prepare_graph.rs  pseudo.txt  query.rs  voronoi.rs
src/dataset/: mod.rs
src/graph/: mod.rs
src/ik/: mod.rs
src/ik/al/: mod.rs  vor.rs  vor_mh.rs  voronoi_minheap.rs
src/ik/st/: mod.rs  node.rs  result.rs
src/ikdsr/: main.rs  mod.rs  types.rs
src/ikdsr/algo/: bfs_minheap.rs  mod.rs  voronoi.rs  voronoi_minheap.rs
src/ikdsr/structure/: edge.rs  graph.rs  node.rs  result.rs
src/src/: reader.rs  types.rs
src/structure/: edge.rs  graph.rs  mod.rs  node.rs  query.rs
src/structure/voronoi/: mod.rs  state.rs
tests/: algo.rs
