[package]
name = "t"
version = "0.1.0"
authors = ["Syukron Rifail M <syukronrifai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "^1.1"
float-cmp = "^0.6.0"
petgraph = "^0.5.0"
ordered-float = "1.0"

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "my_benchmark"
harness = false
